# genomap

./: .gitattributes  LICENSE  MANIFEST.in  README.md  genoMapDemo.ipynb  genomap.py  genomapOPT.py  main.py  requirements.txt  run  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  release.yml  testpypi-publish.yml
MATLAB/: construct_genomap.m  createInteractionMatrix.m  createMeshDistanceMatrix.m  demo_genomap.asv  demo_genomap.m  even_or_odd.m  index_TM.mat  label_TMData.mat
MATLAB/gromov-wassersteinOT/: setparams.m
data/: TM_data.csv  readme.txt
genomap/: ConvDEC.py  ConvIDEC.py  FcDEC.py  __init__.py  class_discriminative_opt.py  gTraj_utils.py  genoMapDemo.html  genoNet.py  genomap.py  group_centroid_opt.py
genomap/bregman_genomap/: __init__.py  bregman_genomap.py
genomap/data/: readme.txt
genomap/genoAnnotate/: __init__.py  genoAnnotate.py
genomap/genoClassification/: __init__.py  genoClassification.py
genomap/genoDR/: __init__.py  genoDimReduction.py
genomap/genoMOI/: __init__.py  genoMOI.py
genomap/genoNet/: __init__.py  genoNet.py
genomap/genoNetRegression/: __init__.py  genoNet_regression.py
genomap/genoNetus/: __init__.py  genoNetus.py
genomap/genoRegression/: __init__.py  genoRegression.py
genomap/genoSig/: __init__.py  genoSig.py
genomap/genoTraj/: __init__.py  genoTraj.py
genomap/genoVis/: __init__.py  genoVis.py
genomap/genomapOPT/: __init__.py  genomapOPT.py
genomap/genomapT/: __init__.py  genomapT.py
genomap/genotype/: __init__.py  genotype.py
genomap/utils/: ConvDEC.py  ConvIDEC.py  FcDEC.py  FcIDEC.py  (+6 more)
(+12 files in other folders)
