[metadata]
name = genomap
version = 0.0.1
author = Md Tauhidul Islam
author_email = tauhid@stanford.edu
description = Create images from gene expression data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xinglab-ai/genomap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons Attribution-NonCommercial-NoDerivs 2.0
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7, <= 3.9
include_package_data = True