[metadata]
name = test-vasudha-genomap
version = 0.0.6
author = Vasudha Jha
author_email = reachvasudha27@gmail.com
description = Create images from gene expression data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xinglab-ai/genomap
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True